# RoboVerse

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  docker-compose.yml  et --mixed HEAD~1  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  proposal.md  question.md
.github/workflows/: pre-commit.yml  premerge-ci.yml
dashboard/: .gitignore  README.md  app.py  app_dataset.py  conf.yml  conf_dataset.yml  goal.yml  minimal_test_script.py  run_test.py  run_test_data.py
dashboard/logs_dataset/: results.json  results_new.json
dashboard/templates/: dashboard.html  dashboard_dataset.html
docs/: .gitignore  README.md  requirements.txt
docs/source/: conf.py  index.md
get_started/: 0_static_scene.py  1_control_robot.py  2_add_new_robot.py  3_parallel_envs.py  4_motion_planning.py  5_hybrid_sim.py  6_advanced_rendering.py  7_multiple_robots.py  8_mount_camera.py  9_cfg_task.py  multiple_cameras.py  utils.py
get_started/example_assets/: .gitignore
get_started/motion_planning/: 0_franka_planning.py  0_object_grasping.py  1_object_grasping.py  2_water_pouring.py  util_gsnet.py
get_started/rl/: 0_ppo_reaching.py  0_ppo_reaching_new.py
metasim/: __init__.py  constants.py  types.py
metasim/cfg/: __init__.py  control.py  lights.py  objects.py  query_type.py  randomization.py  render.py  scenario.py  simulator_params.py
metasim/queries/: base.py  site.py
metasim/scripts/: .gitignore  collect_demo.py  empty_demo.py  gpt_gen.py  motion_planning.py  motion_planning_gapartnet.py  random_action.py  random_action_ee.py  random_action_pure.py  random_action_really_pure.py  replay_demo.py  replay_demo_demo_video.py  replay_demo_moving_camera.py  retarget_demo.py  teleop_keyboard.py  teleop_phone.py  teleop_xr.py  train_ppo.py  train_ppo_vec.py
metasim/sim/: __init__.py  base.py  env_wrapper.py  hybrid.py  parallel.py
metasim/test/: state_consistency.py
metasim/utils/: __init__.py  camera_util.py  color_util.py  configclass.py  dict.py  hf_util.py  humanoid_reward_util.py  humanoid_robot_util.py  io_util.py  kinematics_utils.py  math.py  parse_util.py  save_util.py  setup_util.py  state.py  string_util.py  teleop_utils.py  tensor_util.py  viz_utils.py
metasim/wrapper/: gym_vec_env.py
roboverse_learn/: .gitignore  README.md  eval.py  eval_act.py  eval_rdt.py  eval_test_demo.py  scripts.sh  train.py
roboverse_learn/algorithms/: .gitignore  __init__.py  act_runner.py  base_runner.py  data2zarr_dp.py  dp_runner.py  vla_runner.py
roboverse_learn/algorithms/diffusion_policy/: .gitignore  DP.py  README.md  data2zarr_dp.sh  pyproject.toml  train.py  train.sh  train_dp.sh
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/: __init__.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/common/: json_logger.py  normalize_util.py  pose_trajectory_interpolator.py  pymunk_override.py  pymunk_util.py  pytorch_util.py  replay_buffer.py  robomimic_config_util.py  robomimic_util.py  sampler.py  timestamp_accumulator.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/config/: robot_dp.yaml
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/config/task/: default_task.yaml
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/dataset/: robot_image_dataset.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/env_runner/: dp_runner.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/model/bet/action_ae/: __init__.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/model/bet/action_ae/discretizers/: k_means.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/model/bet/latent_generators/: latent_generator.py  mingpt.py  transformer.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/model/bet/libraries/: loss_fn.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/model/bet/libraries/mingpt/: model.py  trainer.py  utils.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/model/common/: dict_of_tensor_mixin.py  lr_scheduler.py  normalizer.py  rotation_transformer.py  tensor_util.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/model/diffusion/: conditional_unet1d.py  ema_model.py  mask_generator.py  transformer_for_diffusion.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/model/vision/: crop_randomizer.py  model_getter.py  multi_image_obs_encoder.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/policy/: base_image_policy.py  diffusion_unet_image_policy.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py  shared_ndarray.py
roboverse_learn/algorithms/diffusion_policy/diffusion_policy/workspace/: base_workspace.py  robotworkspace.py
roboverse_learn/algorithms/diffusion_policy/scripts/: prune_and_rename.py
roboverse_learn/fast_td3/: fast_td3.py  fast_td3_deploy.py  fast_td3_utils.py  train.py  wrapper.py
roboverse_learn/humanoidbench_rl/: sb3_wrapper_isaacgym.py  sb3_wrapper_isaaclab.py  sb3_wrapper_mujoco.py  train_sb3.py  wrapper_sb3.py
roboverse_learn/rl/: README.md  __init__.py  env.py  eval_rl.py  task_registry.py  task_wrapper.py  train_rl.py
roboverse_learn/rlds_utils/: README.md  environment_ubuntu.yml  setup.py  visualize_dataset.py
roboverse_learn/tasks/: base.py  (+1 more)
scripts/: asset_converter.py  batch_mjcf2urdf.py  batch_urdf2usd.py  clean_articulation_root.py  clean_usd.py  coacd_preprocess.py  collect_demo_multi.py  collect_demo_multi_pathtracing.py  collect_demo_multi_retry.py  convert_mjcf.py  convert_traj_v1_to_v2.py  get_all_avaliable_demo_stat.py  imgs2video.py  isaacgym_animate.py  mesh2obj.py  mesh_rescale.py  mjcf2urdf.py  mjcf2urdf_direct_convert.py  mjcf2urdf_no_texture.py  mjcf_snapshot.py  print_usd_joint_names.py  run_multi.py  run_multi.sh  test_usd.py  transfer.sh  urdf2mjcf.py  urdf2usd.py  urdf_snapshot.py  usd_snapshot.py
(+895 files in other folders)
