[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diffusion_policy"
version = "0.1.0"
description = "Diffusion policy for RoboVerse"
requires-python = ">=3.8"
dependencies = [
    "zarr==2.12.0",
    "ipdb",
    "gpustat",
    "omegaconf",
    "hydra-core==1.2.0",
    "dill==0.3.5.1",
    "einops==0.4.1",
    "diffusers",
    "numba",
    "moviepy",
    "imageio",
    "av",
    "matplotlib",
    "termcolor",
    "huggingface_hub",
    "pillow",
]
